--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,31 +3,42 @@
 @tailwind utilities;
 
 @layer base {
-  :root {
-    --background: 0 0% 100%;
-    --foreground: 222.2 84% 4.9%;
+	:root {
+		--background: 0 0% 100%;
+		--foreground: 222.2 84% 4.9%;
 
-    --font-sans: "Inter", sans-serif;
+		--font-sans: 'Poppins', sans-serif;
+		--font-heading: 'Marcellus', serif;
 
-    --radius: 0.5rem;
-  }
+		--radius: 0.5rem;
+	}
 
-  .dark {
-    --background: 222.2 84% 4.9%;
-    --foreground: 210 40% 98%;
+	.dark {
+		--background: 222.2 84% 4.9%;
+		--foreground: 210 40% 98%;
 
-    --box-shadow: 0px 0px 4px 0px #ffffff9e;
-  }
+		--box-shadow: 0px 0px 4px 0px #ffffff9e;
+	}
 }
 
 @layer components {
-  .modal_title {
-    @apply text-center text-2xl/9 font-bold tracking-tight text-gray-900;
-  }
-  .modal_sub_title {
-    @apply text-center text-base tracking-tight text-gray-900;
-  }
+	.modal_title {
+		@apply text-center text-2xl/9 font-bold tracking-tight text-gray-900;
+	}
+	.modal_sub_title {
+		@apply text-center text-base tracking-tight text-gray-900;
+	}
 }
+
 body {
-  font-family: Arial, Helvetica, sans-serif;
+	font-family: var(--font-sans);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-family: var(--font-heading);
 }
