--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,12 +13,12 @@
 		--radius: 0.5rem;
 	}
 
-	.dark {
+	/* .dark {
 		--background: 222.2 84% 4.9%;
 		--foreground: 210 40% 98%;
 
 		--box-shadow: 0px 0px 4px 0px #ffffff9e;
-	}
+	} */
 }
 
 @layer components {
