update shop page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,17 +3,24 @@
 @tailwind utilities;
 
 @layer base {
-  :root {
-    --background: 0 0% 100%;
-    --foreground: 222.2 84% 4.9%;
+	:root {
+		--background: 0 0% 100%;
+		--foreground: 222.2 84% 4.9%;
 
-    --font-sans: "Poppins", sans-serif;
-    --font-heading: "Marcellus", serif;
+		--font-sans: 'Poppins', sans-serif;
+		--font-heading: 'Lato', serif;
 
-    --radius: 0.5rem;
-  }
+		--radius: 0.5rem;
 
-  /* .dark {
+		/* primary color hsl */
+		--primary-hue: 53.14; /* Base hue */
+		--primary-saturation: 91.62%; /* Base saturation */
+		--primary-lightness: 37.45%; /* Base lightness */
+
+		--primary: hsl(53.14deg 91.62% 37.45%);
+	}
+
+	/* .dark {
 		--background: 222.2 84% 4.9%;
 		--foreground: 210 40% 98%;
 
@@ -22,17 +29,17 @@
 }
 
 @layer components {
-  .modal_title {
-    @apply text-center text-2xl/9 font-bold tracking-tight text-gray-900;
-  }
-  .modal_sub_title {
-    @apply text-center text-base tracking-tight text-gray-900;
-  }
+	.modal_title {
+		@apply text-center text-2xl/9 font-bold tracking-tight text-gray-900;
+	}
+	.modal_sub_title {
+		@apply text-center text-base tracking-tight text-gray-900;
+	}
 }
 
 body {
-  font-family: var(--font-sans);
-  letter-spacing: 1.5px;
+	font-family: var(--font-poppins);
+	letter-spacing: 1.5px;
 }
 
 h1,
@@ -41,5 +48,5 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: var(--font-heading);
+	font-family: var(--font-lato);
 }
